# autohaus-unified-core

./: .cursorrules  .gitignore  AGENT_COORDINATION_PROTOCOL.md  AI_GOVERNANCE_PACKET.md  AUTOHAUS_SYSTEM_STATE.json  AutoHaus_COS_Communication_Protocol.md  AutoHaus_COS_Strategic_Audit.md  AutoHaus_Core_UI_Architecture.md  AutoHaus_Frontend_AI_Blueprint.md  AutoHaus_System_AI_Blueprint.md  AutoHaus_System_Overview.md  CIL_MASTER_BLUEPRINT_v2.0.md  CIL_RETROFIT_PLAN.md  CONTEXT.md  EXECUTION_BLUEPRINT.md  FRONTEND_BUILD_PROMPT_PHASE_9.md  LLM_ORCHESTRATION_PLAN.md  PIPELINE_AUDIT.md  REPLIT_HANDSHAKE_PACKET.md  RULES.md  SECRETS_MANIFEST.example.md  STRATEGY_MyKaarma_Parity.md  UCC_v1_Replit_Initialization_Packet.md  bq_query.py  check_secrets.py  package-lock.json  package.json  pilot_test.py  pyproject.toml  seed_roles.py
10_IT_AI_Core_Layer/: package-lock.json  test_logs.txt
10_IT_AI_Core_Layer/backend/: Dockerfile  Procfile  api_webhook.py  main.py  requirements.txt  seed_inventory.py  seed_roles.py  service.yaml  test_membrane.py  test_ws_orchestrator.py
10_IT_AI_Core_Layer/frontend/: .env  package-lock.json  package.json  vite.config.ts
10_IT_AI_Core_Layer/scripts/: anomaly_engine.py  audit_shared_drive.py  deep_audit.py  deploy_assets.py  download_replit.py  execute_shadow_archive.py  gmail_historical_scan.py  init_bq_schema.sql  init_vw_digital_twin.sql  mirror_drive_structure.py  mirror_repo.sh  provision_identity_graph.py  provision_lineage_log.py  rename_drive_root.py  replit_init.sh  seed_tier0.py  setup_governance_views.py  spark_test.py  (+5 more)
(+199 files in other folders)
